# procpilot

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  clippy.toml  deny.toml
.github/workflows/: ci.yml  release.yml
examples/: basic.rs  testable.rs
scripts/: stats.sh
src/: async_spawned.rs  cmd.rs  cmd_display.rs  error.rs  lib.rs  redirection.rs  retry.rs  runner.rs  runner_trait.rs  spawned.rs  stdin.rs  testing.rs
src/cmd/: async_cmd.rs
tests/: async_runner.rs  mock_runner.rs  non_exhaustive.rs  pipeline.rs  prelude.rs  runner.rs  spawned.rs
